ansible/roles/dashboard/files/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    haproxy.org/server-ssl: "true"
    haproxy.org/path-rewrite: /dashboard/(.*) /\1
spec:
  ingressClassName: haproxy
  rules:
    - host: dashboard.arriaga.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
